Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.2, 5.13.1
-
None
-
Linux OpenSuse
Qt5.8 (Same problem in Qt5.9)
QtWebEngine 1.4
QtQuick.Window 2.2
QtQuick 2.7
Description
In general, it's a simple GUI with a WebEngineView, which displays a HTML file with one dropdown item, which should be rotated by 180° for an embedded device.
I attached a SSCCE for you to reproduce the problem.
Version 1: In the default landscape orientation everything works fine and like expected.
Version 2: (Try to rotate the WebEngineView on behalf of an Item) If I rotate the "Item", in which the WebEngineView is located, the dropdown content gets displayed at an unexpected position (Even outside the WebEngineView area)
Version 3: (Try to rotate the WebEngineView on behalf of an Rectangle) If I rotate the "Rectangle", in which the WebEngineView is located, the dropdown content gets displayed at an unexpected position (Even outside the WebEngineView area)
Attachments
Issue Links
- duplicates
-
QTBUG-73244 Rotated WebEngineView renders Comboboxes to incorrect locations
-
- Closed
-
- relates to
-
QTBUG-68440 QWebEngine Select controls open in wrong position after resizing window
-
- Closed
-
-
QTBUG-94403 WebEngineView: HTML element select doesn't expand after moving app window between different displays
-
- Closed
-
-
QTBUG-75893 Rotated WebEngineView renders Comboboxes in wrong orientation
-
- Closed
-