src/webenginequick/render_widget_host_view_qt_delegate_quickwindow.h
@@ -79,6 +79,8 @@ public:
 private:
     QScopedPointer<RenderWidgetHostViewQtDelegateQuick> m_realDelegate;
     QQuickItem *m_virtualParent;
+    QRect m_rect;
+    bool m_rotated;
 };
 
 } // namespace QtWebEngineCore
